# CMakeModern

src/: CMakeLists.txt  master_cmake_flags.txt
src/MyLib_1/: mylib_1.cpp  mylib_1.h
src/MyLib_2/: mylib_2.cpp  mylib_2.h  newheader.h  newheader2.h
src/theapp/: CMakeLists.txt  main.cpp
